fixed right and bottom whitespace

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,18 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
 body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
+}
+#home {
+  position: relative;
 }
 /* navbar */
 .navbar {
@@ -38,7 +49,7 @@ body {
   width: 100%;
   max-width: 100%;
   position: absolute;
-  top: 38%;
+  top: 47%;
   z-index: 1;
 }
 .caption,
@@ -71,7 +82,8 @@ h1 h3 {
   z-index: 2;
   display: flex;
   justify-content: center;
-  margin-top: -1755px;
+  margin-top: -1740px;
+  position: relative;
 }
 
 .welcome-text {
@@ -146,6 +158,11 @@ h1 h3 {
 /* Demo section */
 #demo {
   position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-y: hidden;
 }
 .demo-inner {
   background-image: url(images/misc/leaf.jpg);
